@@ -2,6 +2,8 @@ Revision history for {{$dist->name}}
 
 {{$NEXT}}
 
+ * Do not require MRO::Compat for newer perls
+
 2.001003  2012-12-14 08:34:16 CST6CDT
 
  * Fix tests when user has an XDG system, and add a way to turn XDG off
